After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 380817 - g-m-m crashes when added to panel
g-m-m crashes when added to panel
Status: RESOLVED FIXED
Product: gnome-main-menu
Classification: Other
Component: general
unspecified
Other Linux
: Normal normal
: ---
Assigned To: Jim Krehl
GNOME main menu maintainers
Depends on:
Blocks:
 
 
Reported: 2006-11-30 09:13 UTC by Diego Escalante Urrelo (not reading bugmail)
Modified: 2008-12-26 21:21 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Patch to produce debugging info (674 bytes, patch)
2006-11-30 20:49 UTC, Jim Krehl
none Details | Review

Description Diego Escalante Urrelo (not reading bugmail) 2006-11-30 09:13:28 UTC
I compiled g-m-m from CVS some minutes ago and then killed bonobo server to have the .server files reloaded.
Then I tried to add g-m-m to my panel and it crashed. This happens everytime.

My g-m-m was installed with prefix ~/gnome/sb, bonobo is configured to look in there for .server files.


I'm on Ubuntu Edgy, up-to-date.
Comment 1 Diego Escalante Urrelo (not reading bugmail) 2006-11-30 09:15:18 UTC
I'm sorry I forgot the most important thing!:

Memory status: size: 20463616 vsize: 0 resident: 20463616 share: 0 rss: 8896512 rss_rlim: 0
CPU usage: start_time: 1164877754 rtime: 0 utime: 18 stime: 0 cutime:15 cstime: 0 timeout: 3 it_real_value: 0 frequency: 0

Backtrace was generated from '/usr/libexec/gnome-main-menu'

Using host libthread_db library "/lib/tls/i686/cmov/libthread_db.so.1".
[Thread debugging using libthread_db enabled]
[New Thread -1226310880 (LWP 13462)]
0xffffe410 in __kernel_vsyscall ()

Thread 1 (Thread -1226310880 (LWP 13462))

  • #0 __kernel_vsyscall
  • #1 __waitpid_nocancel
    from /lib/tls/i686/cmov/libpthread.so.0
  • #2 libgnomeui_segv_handle
    at gnome-ui-init.c line 874
  • #3 <signal handler called>
  • #4 get_gconf_value
    at gnome-utils.c line 137
  • #5 file_area_widget_new
    at file-area-widget.c line 158
  • #6 build_main_menu_window
    at main-menu-ui.c line 401
  • #7 main_menu_ui_new
    at main-menu-ui.c line 230
  • #8 main_menu_applet_init
    at main-menu.c line 66
  • #9 panel_applet_marshal_BOOLEAN__STRING
    from /usr/lib/libpanel-applet-2.so.0
  • #10 IA__g_closure_invoke
    at gclosure.c line 490
  • #11 bonobo_closure_invoke_va_list
    from /usr/lib/libbonobo-2.so.0
  • #12 bonobo_closure_invoke
    from /usr/lib/libbonobo-2.so.0
  • #13 panel_applet_add_preferences
    from /usr/lib/libpanel-applet-2.so.0
  • #14 IA__g_cclosure_marshal_VOID__VOID
    at gmarshal.c line 77
  • #15 IA__g_closure_invoke
    at gclosure.c line 490
  • #16 signal_emit_unlocked_R
    at gsignal.c line 2440
  • #17 IA__g_signal_emit_valist
    at gsignal.c line 2199
  • #18 IA__g_signal_emit
    at gsignal.c line 2243
  • #19 bonobo_control_add_listener
    from /usr/lib/libbonoboui-2.so.0
  • #20 _ORBIT_skel_small_Bonobo_Control_setFrame
    from /usr/lib/libbonobo-2.so.0
  • #21 IOP_start_profiles
    from /usr/lib/libORBit-2.so.0
  • #22 ORBit_OAObject_invoke
    from /usr/lib/libORBit-2.so.0
  • #23 ORBit_small_invoke_adaptor
    from /usr/lib/libORBit-2.so.0
  • #24 ORBit_recv_buffer_return_sys_exception
    from /usr/lib/libORBit-2.so.0
  • #25 ORBit_recv_buffer_return_sys_exception
    from /usr/lib/libORBit-2.so.0
  • #26 ORBit_skel_class_register
    from /usr/lib/libORBit-2.so.0
  • #27 ORBit_handle_request
    from /usr/lib/libORBit-2.so.0
  • #28 giop_connection_handle_input
    from /usr/lib/libORBit-2.so.0
  • #29 link_connection_state_changed
    from /usr/lib/libORBit-2.so.0
  • #30 link_io_add_watch_fd
    from /usr/lib/libORBit-2.so.0
  • #31 IA__g_main_context_dispatch
    at gmain.c line 2045
  • #32 g_main_context_iterate
    at gmain.c line 2677
  • #33 IA__g_main_loop_run
    at gmain.c line 2881
  • #34 bonobo_main
    from /usr/lib/libbonobo-2.so.0
  • #35 bonobo_generic_factory_main_timeout
    from /usr/lib/libbonobo-2.so.0
  • #36 bonobo_generic_factory_main
    from /usr/lib/libbonobo-2.so.0
  • #37 panel_applet_factory_main_closure
    from /usr/lib/libpanel-applet-2.so.0
  • #38 panel_applet_factory_main
    from /usr/lib/libpanel-applet-2.so.0
  • #39 main
    at main-menu.c line 34

Comment 2 Jim Krehl 2006-11-30 17:44:49 UTC
Did you install the GConf .schema files?  What is the output of ...

> gconftool-2 -a /desktop/gnome/applications/main-menu

?

Thanks!
jimmyk
Comment 3 Diego Escalante Urrelo (not reading bugmail) 2006-11-30 19:32:29 UTC
Yes, and now I get a point in my panel, literally a black point where I added the g-m-m.
I installed the schemas for control-center, app-browser and slab.

Anyway g-m-m should not crash if gconf keys are not there!
Comment 4 Diego Escalante Urrelo (not reading bugmail) 2006-11-30 19:37:36 UTC
diego@milkyway:~$ gconftool-2 -a /desktop/gnome/applications/main-menu

 lock_screen_priority = [gnome-screensaver-command --lock,xscreensaver-command --lock]
 urgent_close = true
 ab_new_apps_file_key = .config/ab-newapps.txt
 application_browser = /home/diego/gnome/sb/share/applications/application-browser.desktop
 cc_exit_shell_on_action_add_remove = false
 file_browser = nautilus-home.desktop
 system_monitor = gnome-system-monitor.desktop
 ab_new_apps_max_items = 9
 ab_exit_shell_on_action_start = true
 cc_exit_shell_on_static_action = false
 cc_actions_list = [Change Desktop Background;background.desktop,Add Printer;gnome-cups-manager.desktop,Configure Network;YaST2/lan.desktop,Change Password;gnome-passwd.desktop,Add User;YaST2/users.desktop,Open Administrator Settings;YaST.desktop]
 uninstall_package_command = zen-remover PACKAGE_NAME
 cc_exit_shell_on_action_help = false
 upgrade_package_command = zen-updater --no-tray PACKAGE_NAME
 network_config_tool = /usr/share/applications/YaST2/lan.desktop
 ab_exit_shell_on_action_add_remove = false
 search_command = beagle-search SEARCH_STRING
 ab_exit_shell_on_action_help = false
 ab_exit_shell_on_action_upgrade_uninstall = true
 cc_exit_shell_on_action_start = false
 cc_exit_shell_on_action_upgrade_uninstall = false
Comment 5 Jim Krehl 2006-11-30 20:48:05 UTC
(In reply to comment #3)
> Yes, and now I get a point in my panel, literally a black point where I added
> the g-m-m.
> I installed the schemas for control-center, app-browser and slab.

Thanks, I forgot to include the recursive flag, so I didn't see the key I was looking for ... can you do this:

$ gconftool-2 -g /desktop/gnome/applications/main-menu/file-area/item_limit

For some reason it's not picking up that key (which is also the first key the main-menu queries).  I'll attach a patch which will produce some debugging info.  Could you recompile with that patch and given me the STDOUT and STDERR when the main-menu is loaded?

> Anyway g-m-m should not crash if gconf keys are not there!

Easy, killer, it's not clear to me why g-m-m is crashing.  I'll appreciate any help you can offer to help diagnose and fix this bug.

Thanks!
jimmyk
Comment 6 Jim Krehl 2006-11-30 20:49:55 UTC
Created attachment 77445 [details] [review]
Patch to produce debugging info

This patch will dump some debugging info to STDOUT.
Comment 7 Diego Escalante Urrelo (not reading bugmail) 2006-11-30 21:53:40 UTC
diego@milkyway:~/gnome/gnome-main-menu$ gconftool-2 -g /desktop/gnome/applications/main-menu/file-area/item_limit
6

Output:

diego@milkyway:~/gnome/gnome-main-menu$ ./main-menu/src/main-menu 
client = 0x8061360, value = 0x811d240, key = [/desktop/gnome/applications/main-menu/file-area/item_limit]
client = 0x8061360, value = 0x811d300, key = [/desktop/gnome/applications/main-menu/lock-down/showable_file_types]
client = 0x8061360, value = 0x814ba60, key = [/desktop/gnome/lockdown/disable_command_line]
client = 0x8061360, value = 0x8148800, key = [/desktop/gnome/applications/main-menu/file-area/user_specified_apps]
client = 0x8061360, value = 0x835c200, key = [/desktop/gnome/applications/main-menu/file-area/file_class]
client = 0x8061360, value = 0x835c180, key = [/desktop/gnome/lockdown/disable_command_line]
client = 0x8061360, value = 0x836ac90, key = [/desktop/gnome/applications/main-menu/file-area/file_class]
client = 0x8061360, value = 0x83689a0, key = [/desktop/gnome/lockdown/disable_command_line]
client = 0x8061360, value = 0x8373120, key = [/apps/nautilus/preferences/enable_delete]
client = 0x8061360, value = 0x842d020, key = [/apps/nautilus/preferences/enable_delete]
client = 0x8061360, value = 0x8447800, key = [/apps/nautilus/preferences/enable_delete]
client = 0x8061360, value = 0x844b940, key = [/apps/nautilus/preferences/enable_delete]
client = 0x8061360, value = 0x8449e80, key = [/apps/nautilus/preferences/enable_delete]
client = 0x8061360, value = 0x84489c0, key = [/apps/nautilus/preferences/enable_delete]
client = 0x8061360, value = 0x844ac40, key = [/apps/nautilus/preferences/enable_delete]
client = 0x8061360, value = 0x84518d0, key = [/apps/nautilus/preferences/enable_delete]
client = 0x8061360, value = 0x8450dd0, key = [/apps/nautilus/preferences/enable_delete]
client = 0x8061360, value = 0x8448870, key = [/apps/nautilus/preferences/enable_delete]
client = 0x8061360, value = 0x8480aa0, key = [/apps/nautilus/preferences/enable_delete]
client = 0x8061360, value = 0x847d160, key = [/apps/nautilus/preferences/enable_delete]
client = 0x8061360, value = 0x8474550, key = [/apps/nautilus/preferences/enable_delete]
client = 0x8061360, value = 0x8452250, key = [/apps/nautilus/preferences/enable_delete]
client = 0x8061360, value = 0x8467c40, key = [/apps/nautilus/preferences/enable_delete]
client = 0x8061360, value = 0x8481a40, key = [/apps/nautilus/preferences/enable_delete]
client = 0x8061360, value = 0x848d4a0, key = [/apps/nautilus/preferences/enable_delete]
client = 0x8061360, value = 0x8467cc0, key = [/apps/nautilus/preferences/enable_delete]
client = 0x8061360, value = 0x8468f30, key = [/apps/nautilus/preferences/enable_delete]
client = 0x8061360, value = 0x8498210, key = [/apps/nautilus/preferences/enable_delete]
client = 0x8061360, value = 0x8492270, key = [/apps/nautilus/preferences/enable_delete]
client = 0x8061360, value = 0x847c430, key = [/apps/nautilus/preferences/enable_delete]
client = 0x8061360, value = 0x847c3c0, key = [/apps/nautilus/preferences/enable_delete]
client = 0x8061360, value = 0x8474d80, key = [/apps/nautilus/preferences/enable_delete]
client = 0x8061360, value = 0x8491d30, key = [/apps/nautilus/preferences/enable_delete]
client = 0x8061360, value = 0x8490450, key = [/apps/nautilus/preferences/enable_delete]
client = 0x8061360, value = 0x847eb30, key = [/apps/nautilus/preferences/enable_delete]
client = 0x8061360, value = 0x8472300, key = [/apps/nautilus/preferences/enable_delete]
client = 0x8061360, value = 0x847cb00, key = [/apps/nautilus/preferences/enable_delete]
client = 0x8061360, value = 0x8489db0, key = [/apps/nautilus/preferences/enable_delete]
client = 0x8061360, value = 0x847c060, key = [/apps/nautilus/preferences/enable_delete]
client = 0x8061360, value = 0x8466e40, key = [/apps/nautilus/preferences/enable_delete]
client = 0x8061360, value = 0x8497b10, key = [/apps/nautilus/preferences/enable_delete]
client = 0x8061360, value = 0x8463850, key = [/apps/nautilus/preferences/enable_delete]
client = 0x8061360, value = 0x849ecc0, key = [/apps/nautilus/preferences/enable_delete]
client = 0x8061360, value = 0x83e4340, key = [/apps/nautilus/preferences/enable_delete]
client = 0x8061360, value = 0x849e100, key = [/apps/nautilus/preferences/enable_delete]
client = 0x8061360, value = 0x849e130, key = [/apps/nautilus/preferences/enable_delete]
client = 0x8061360, value = 0x849e660, key = [/apps/nautilus/preferences/enable_delete]
client = 0x8061360, value = 0x84a2d30, key = [/apps/nautilus/preferences/enable_delete]
client = 0x8061360, value = 0x84a3550, key = [/apps/nautilus/preferences/enable_delete]
client = 0x8061360, value = 0x84a2f40, key = [/apps/nautilus/preferences/enable_delete]
client = 0x8061360, value = 0x84a8dd0, key = [/apps/nautilus/preferences/enable_delete]
client = 0x8061360, value = 0x84ab530, key = [/apps/nautilus/preferences/enable_delete]
client = 0x8061360, value = 0x84b1d40, key = [/apps/nautilus/preferences/enable_delete]
client = 0x8061360, value = 0x84b41a0, key = [/apps/nautilus/preferences/enable_delete]
client = 0x8061360, value = 0x84b4060, key = [/apps/nautilus/preferences/enable_delete]
client = 0x8061360, value = 0x84bfe00, key = [/apps/nautilus/preferences/enable_delete]
client = 0x8061360, value = 0x84b5930, key = [/apps/nautilus/preferences/enable_delete]
client = 0x8061360, value = 0x84b4d10, key = [/apps/nautilus/preferences/enable_delete]
client = 0x8061360, value = 0x84b6d20, key = [/apps/nautilus/preferences/enable_delete]
client = 0x8061360, value = 0x83e2190, key = [/apps/nautilus/preferences/enable_delete]
client = 0x8061360, value = 0x84c3eb0, key = [/apps/nautilus/preferences/enable_delete]
Comment 8 Jim Krehl 2006-12-01 04:40:24 UTC
Hmm, not sure what's going on, I've updated cvs with something that may fix this, can you check?

Thanks!
jimmyk
Comment 9 Diego Escalante Urrelo (not reading bugmail) 2006-12-01 05:56:58 UTC
Nothing. Same thing:

client = 0x8061360, value = 0x811fe60, key = [/desktop/gnome/applications/main-menu/file-area/item_limit]
client = 0x8061360, value = 0x811feb0, key = [/desktop/gnome/applications/main-menu/lock-down/showable_file_types]
client = 0x8061360, value = 0x814b970, key = [/desktop/gnome/lockdown/disable_command_line]
client = 0x8061360, value = 0x814bc50, key = [/desktop/gnome/applications/main-menu/file-area/user_specified_apps]
client = 0x8061360, value = 0x835a880, key = [/desktop/gnome/applications/main-menu/file-area/file_class]
client = 0x8061360, value = 0x835aa20, key = [/desktop/gnome/lockdown/disable_command_line]
client = 0x8061360, value = 0x835ba50, key = [/desktop/gnome/applications/main-menu/file-area/file_class]
client = 0x8061360, value = 0x836a130, key = [/desktop/gnome/lockdown/disable_command_line]
client = 0x8061360, value = 0x8372540, key = [/apps/nautilus/preferences/enable_delete]
client = 0x8061360, value = 0x8431fc0, key = [/apps/nautilus/preferences/enable_delete]

In case you care, control-center always crashes:


** (Gnome Control Center:20666): WARNING **: get_actions_list() - PROBLEM - Can't load gnome-cups-manager.desktop


** (Gnome Control Center:20666): WARNING **: get_actions_list() - PROBLEM - Can't load YaST2/lan.desktop


** (Gnome Control Center:20666): WARNING **: get_actions_list() - PROBLEM - Can't load gnome-passwd.desktop


** (Gnome Control Center:20666): WARNING **: get_actions_list() - PROBLEM - Can't load YaST2/users.desktop


** (Gnome Control Center:20666): WARNING **: get_actions_list() - PROBLEM - Can't load YaST.desktop


** ERROR **: file app-shell.c: line 647 (create_application_category_sections): assertion failed: (app_data->categories_list != NULL)
aborting...

** (bug-buddy:20671): WARNING **: Couldn't load icon for Decrypt File

** (bug-buddy:20671): WARNING **: Couldn't load icon for Epiphany Web Bookmarks

** (bug-buddy:20671): WARNING **: Couldn't load icon for Import Key

** (bug-buddy:20671): WARNING **: Couldn't load icon for Open Folder

** (bug-buddy:20671): WARNING **: Couldn't load icon for Verify Signature
/usr/libexec/Gnome Control Center: No such file or directory.
Cannot access memory at address 0x50ba
Cannot access memory at address 0x50ba

Memory status: size: 21811200 vsize: 0 resident: 21811200 share: 0 rss: 9031680 rss_rlim: 0
CPU usage: start_time: 1164952021 rtime: 0 utime: 20 stime: 0 cutime:16 cstime: 0 timeout: 4 it_real_value: 0 frequency: 0

Backtrace was generated from '/usr/libexec/Gnome Control Center'

Using host libthread_db library "/lib/tls/i686/cmov/libthread_db.so.1".
[Thread debugging using libthread_db enabled]
[New Thread -1226320208 (LWP 20666)]
0xffffe410 in __kernel_vsyscall ()

Thread 1 (Thread -1226320208 (LWP 20666))

  • #0 __kernel_vsyscall
  • #1 __waitpid_nocancel
    from /lib/tls/i686/cmov/libpthread.so.0
  • #2 libgnomeui_segv_handle
    at gnome-ui-init.c line 874
  • #3 <signal handler called>
  • #4 __kernel_vsyscall
  • #5 raise
    from /lib/tls/i686/cmov/libc.so.6
  • #6 abort
    from /lib/tls/i686/cmov/libc.so.6
  • #7 IA__g_logv
  • #8 IA__g_log
  • #9 IA__g_assert_warning
    at gmessages.c line 552
  • #10 create_application_category_sections
    at app-shell.c line 647
  • #11 layout_shell
    at app-shell.c line 256
  • #12 main
    at control-center.c line 146
  • #0 __kernel_vsyscall


Comment 10 Jim Krehl 2006-12-12 20:13:18 UTC
The schema still seems to be improperly installed and the main-menu should be handling such an occasion better.  However, it is no longer crashing so I'm going to reduce the severity.  Additionally, can you tell me how/where you're installing the schema files and how you're pointing gconf to the installed schema files?

Thanks!
jimmyk
Comment 11 Diego Escalante Urrelo (not reading bugmail) 2006-12-18 02:08:27 UTC
I'm installing to /home/diego/gnome/sb (as --prefix), I haven't touch gconf in any particular way to point there...
Comment 12 Diego Escalante Urrelo (not reading bugmail) 2006-12-18 02:26:08 UTC
Made a sudo gconftool-2 --install-schema-file for each of the schemas found on g-m-m and didn't worked, it still loops with

client = 0x8061360, value = 0x842d020, key = [/apps/nautilus/preferences/enable_delete]

:(
Comment 13 Diego Escalante Urrelo (not reading bugmail) 2007-10-20 06:54:20 UTC
I found the problem, the problem is that if you have a .recently-used[.xbel|] file that points to missing files, gmm will keep hitting one after another until end of time.
Isn't it wrong that it hits all the files and that it chokes on missing files?

Btw, gmm finally opens after a lot of time waiting.
Comment 14 Magnus Boman 2008-12-26 21:21:56 UTC
This no longer happens.