Check for null GConfValue, http://bugzilla.gnome.org/show_bug.cgi?id=380817.