libslab/gnome-utils.c
@@ -127,7 +127,7 @@ get_gconf_value (const gchar * key)
 	client = gconf_client_get_default ();
 	value = gconf_client_get (client, key, &error);
 
-	if (error)
+	if (error || ! value)
 	{
 		handle_g_error (&error, "%s: error getting %s", __FUNCTION__, key);
 
